Add createBooking endpoint
