# backend/src/endpoints.ts
@@ -1,5 +1,5 @@
 import { Express } from "express";
-import { rootHandler, loginHandler, signupHandler, createRoom, getRoom, getRooms, getUser, getUsers, updateUser, createUser, deleteUser, updateRoom, deleteRoom } from "./handlers";
+import { createBooking, rootHandler, loginHandler, signupHandler, createRoom, getRoom, getRooms, getUser, getUsers, updateUser, createUser, deleteUser, updateRoom, deleteRoom } from "./handlers";
 
 function wrapTryCatch(fn: Function) {
     return async function (req: any, res: any) {
@@ -29,7 +29,7 @@ module.exports = function (app: Express) {
     //get a booking of a user by id
     app.get("/booking/:id");
     //create a booking
-    app.post("/booking");
+    app.post("/booking", createBooking);
     //update a booking by id
     app.put("/booking/:id");
     //delete a booking by id
